[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pedkai-synthetic-generator"
version = "0.1.0"
description = "Synthetic telecom data generator for Pedkai — UK-scale converged operator dataset with radio-layer physics, multi-domain KPIs, scenario injection, and CMDB degradation for Dark Graph training."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Pedkai Team"},
]

dependencies = [
    # Data processing
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # CLI & config
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",

    # Synthetic data generation
    "sdv>=1.10.0",

    # Geospatial (for Indonesian province/site placement)
    "shapely>=2.0.0",

    # Progress & logging
    "tqdm>=4.66.0",
    "structlog>=24.0.0",

    # Validation
    "pandera>=0.18.0",

    # Parquet compression
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

loader = [
    # Only needed when loading into Pedkai's database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
]

[project.scripts]
pedkai-generate = "pedkai_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pedkai_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
